<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="welcome">Welcome to the Wolfpack!</string>
    <string name="welcome2">Splash Screen Yo!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="register_login_account">Register Account</string>
    <string name="register_finance_account">Create New Account</string>
    <string name="finance_account_name">Account Name</string>
    <string name="finance_account_start_balance">Starting Balance</string>
    <string name="new_transaction">New Transaction</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_time_effective">Time Effective</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="new_deposit">New Deposit</string>
    <string name="new_withdrawal">New Withdrawal</string>
    <string name="source">Source</string>
    <string name="reason">Reason</string>

</resources>
