<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountCreationScreen" >

    <EditText
        android:id="@+id/accountcreateFieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:hint="@string/finance_account_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/accountcreateFieldBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/finance_account_start_balance"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/accountcreateButtonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accountcreateButtonCancel"
        android:layout_alignBottom="@+id/accountcreateButtonCancel"
        android:layout_alignRight="@+id/accountcreateFieldBalance"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/accountcreateButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountcreateFieldBalance"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:text="@string/cancel" />

</RelativeLayout>